<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_selector"
        android:title="@string/kham_pha"/>

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/category_selector"
        android:title="@string/the_loai"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_selector"
        android:title="@string/tim_kiem"/>

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/notification_selector"
        android:title="@string/thong_bao"/>

    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/menu_selector"
        android:title="@string/menu"/>
</menu>